-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Some future release
-
None
-
7b77ef6 (qtbase) 50f4676f6189500ce6c488a9596eb09a05c7fd53
A link created using \target does not compile in qtdeclarative:
Definition target:
\target qqmlpropertymap_derived_parentobj
\fn QQmlPropertyMap::QQmlPropertyMap(DerivedType *derived, QObject *parentObj)
Constructs a bindable map with parent object \a parent. Use this constructor
In classes derived from QQmlPropertyMap.
Linking to the target (in the same file, qqmlpropertymap.cpp):
\note When deriving a class from QQmlPropertyMap, use the \l {qqmlpropertymap_derived_parentobj}{protected two-argument constructor} which ensures that the class is correctly registered with the Qt \l {Meta-Object System}.
Error message:
/home/nico/dev/gerrit/stable/qtdeclarative/src/qml/util/qqmlpropertymap.cpp:134: warning: Can't link to 'qqmlpropertymap_derived_parentobj'
| For Gerrit Dashboard: QTBUG-47286 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 122463,4 | qdoc: Make \target and \keyword commands link as expected | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 122896,6 | qdoc: Allow formal parameters in link targets | dev | qt/qtbase | Status: MERGED | +2 | 0 |